# clippy

./: .grove.yaml  Cargo.toml  README.md  ROADMAP.md  Taskfile.yml  mise.toml
.github/workflows/: ci.yml
src/: cli.rs  main.rs
src/broker/: connection.rs  handler.rs  mod.rs  registry.rs  sink.rs  state.rs
src/client/: broker_client.rs  format.rs  mod.rs
src/hotkey/: broker_client.rs  keybinding.rs  mod.rs  x11.rs
src/ipc/: codec.rs  mod.rs  protocol.rs
src/pty/: broker_client.rs  child.rs  mod.rs  terminal.rs
src/resolver/: clipboard.rs  mod.rs
src/resolver/x11/: clipboard.rs  hotkey.rs  mod.rs  session.rs
src/turn/: ansi.rs  mod.rs  presets.rs
