[package]
name = "clippyd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clippyd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1"
regex = "1"
nix = { version = "0.30", features = ["term", "signal", "process", "ioctl", "fs"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
bytes = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
